--- a/views/index.html
+++ b/views/index.html
@@ -8,5 +8,12 @@
 </head>
 <body>
     <h1>Hello From Express</h1>
+    <form action="/name" method="post">
+        <label>First Name :</label>
+        <input type="text" name="first" value="John"><br>
+        <label>Last Name :</label>
+        <input type="text" name="last" value="Doe"><br><br>
+        <input type="submit" value="Submit">
+      </form> 
 </body>
 </html>
